--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,12 @@
 	<name>example</name>
 	<description>Demo project for Spring Boot</description>
 
+	<modules>
+		<module>async</module>
+		<module>kafka</module>
+		<module>shiro</module>
+	</modules>
+
 	<properties>
 		<java.version>1.8</java.version>
 	</properties>
@@ -29,6 +35,18 @@
 			<artifactId>spring-boot-starter-aop</artifactId>
 		</dependency>
 
+		<!-- gson -->
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.8.2</version>
+		</dependency>
+		<!-- 通用的/常用的工具类包 -->
+		<dependency>
+			<groupId>commons-lang</groupId>
+			<artifactId>commons-lang</artifactId>
+			<version>2.6</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.projectlombok</groupId>
