--- a/shiro/src/main/resources/application.yml
+++ b/shiro/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 10001
+  port: 10002
 
 spring:
   application:
@@ -16,3 +16,26 @@ spring:
       query-timeout: 6000
       transaction-query-timeout: 6000
       remove-abandoned-timeout: 1800
+  redis:
+    database: 7
+    host: 39.108.216.235
+    port: 6379
+    password: root123456
+    lettuce:
+      pool:
+        max-active: 8
+        max-idle: 8
+        min-idle: 0
+  main:
+    allow-bean-definition-overriding: true
+  redisson:
+    address: redis://www.booleandev.xyz:6379
+    password: root123456
+    database: 7
+shiro:
+  redis:
+    sessionLive: 30
+    sessionPrefix: shiro_redis_session-
+    cacheLive: 30
+    cachePrefix: shiro_redis_cache-
+    kickoutPrefix: shiro_redis_kickout-
