:sparkles: 添加注解模块

--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
 		<module>kafka</module>
 		<module>shiro</module>
 		<module>transactional</module>
+		<module>annotation</module>
 	</modules>
 
 	<properties>
